2016-10-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (nodes_tree): If 'validatemenus' is 
	not on, do not complain about a node lacking a menu item if that 
	node has no menu at all.  If 'validatemenus' is not on, in order 
	to complain about the menu structure not matching the section 
	structure, the nodes must be associated with sections and 
	contain menus.  Some comments changed.

2016-10-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (nodes_tree): Only check whether 
	node is in a menu if 'validatemenus' is on.

2016-10-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/30sectioning.t (no_menu): New test.

2016-10-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/Makefile.am (long-checks, long-checks-all): Remove.
	(tex-html-checks tex-html-check): Remove use of LONG_TESTS.
	(long_tests): Add contents to 'base_tests' variable and 
	remove.
	(copy-long): Remove.
	(Makefile.onetst, DIST_SUBDIRS, clean-tests): Remove use of 
	'long_tests' variable.
	* tp/tests/README: Remove discussion of "long tests".

	* tp/Makefile.am (long-checks): Remove target.
	* tp/maintain/regenerate_cmd_tests.sh: Remove handling of "long 
	tests".

2016-10-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi): Record menu regardless of 
	where it occurred.  (Revert change on 2016-10-08 in order to 
	avoid failure of "long tests" under tp/tests.)

2016-10-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (sectioning_structure): Use 'next' 
	instead of putting whole body of loop within a condition.  
	Change comment at start of function.  Delete some code used for 
	debugging.

2016-10-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (_next_content, _collect_structure):
	Remove unused functions.

2016-10-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (_check_menu_entry): Remove 